Criado Inicio do Banco de Dados

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "dipirona28@gmail.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^9"
+    }
 }
